@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-11-23
+ * Added wing.format_datetime() to wing.vue.js.
+
 2020-11-21
  * luxon-date-time component in wing.vue.js now accepts date-disabled-fn property to disable specific dates.
  * wing.format_date() in wing.vue.js now correctly places a comma after the day.
